# lab-4-AlexsandrAnt-1

./: CMakeLists.txt
src/resource_core/: CMakeLists.txt  FileHandle.cpp  FileHandle.hpp  ReourceError.hpp  ResourceError.cpp  ResourceManager.cpp  ResourceManager.hpp  resource_core.cpp  resource_core.hpp
tests/: CMakeLists.txt  tests.cpp
